#3 - Set Docker Hub

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <image>
+                        <name>docker.io/hendisantika/${project.artifactId}:v1</name>
+                    </image>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
