--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,7 +3,7 @@ name: Java CI
 on:
   push:
     branches:
-      - master
+      - main
       - develop
 
 jobs:
@@ -13,9 +13,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 21
       - name: Build with Maven
         run: mvn clean package --file pom.xml
